add second page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <title>Test</title>
+  <title>Home Page</title>
 </head>
 
 <body>
@@ -15,12 +15,12 @@
       <h1>The banner</h1>
       <article>
         <p>Some clever tagline about this awesome Website.</p>
-        <a href="#breweries">Browse stuff</a>
+        <a href="#">Click button</a>
       </article>
     </section>
     <section class="breweries" id="breweries">
       <ul>
-        <li>
+        <li> 
           <figure>
             <!-- Photo by Quentin Dr on Unsplash -->
             <img src="https://images.unsplash.com/photo-1533035350251-aa8b8e208d95?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
@@ -32,7 +32,7 @@
           <p>
             Great stuff to build tables with a cache.
           </p>
-          <a href="#">Visit Website</a>
+          <a href="page1.html">Page 1</a>
         </li>
         <li>
           <figure>
